--- a/src/main/resources/static/get_pacientes.html
+++ b/src/main/resources/static/get_pacientes.html
@@ -8,7 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/get_odontologos.js"></script>
+    <script type="text/javascript" src="js/post_odontologos.js"></script>
     <link rel="stylesheet" href="./css/open-iconic-bootstrap.min.css">
     <link rel="stylesheet" href="./css/animate.css">
 
@@ -44,8 +44,8 @@
                         Pacientes
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Guardar</a></li>
-                        <li><a class="dropdown-item" href="#">Listar</a></li>
+                        <li><a class="dropdown-item" href="./post_pacientes.html">Guardar</a></li>
+                        <li><a class="dropdown-item" href="./get_pacientes.html">Listar</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
@@ -70,21 +70,35 @@
         </div>
     </div>
 </nav>
+<section class="hero-wrap hero-wrap-2" style="background-image: url('./images/bg_1.jpg');" data-stellar-background-ratio="0.5">
+    <div class="overlay"></div>
+    <div class="container">
+        <div class="row no-gutters slider-text align-items-center justify-content-center">
+            <div class="col-md-9 ftco-animate text-center">
+                <h1 class="mb-2 bread">Pacientes</h1>
+                <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Pacientes <i class="ion-ios-arrow-forward"></i></span><span>Listar <i class="ion-ios-arrow-forward"></i></span></p>
+            </div>
+        </div>
+    </div>
+</section>
 <div class="container">
-    <div id="div_odontologo_table">
-        <h1>Listado de Odontologos</h1>
+    <div id="div_paciente_table">
+        <h1>Listado de Pacientes</h1>
         <div class="row col-md-6 table-responsive">
-            <table id="odontologoTable" class="table table-striped">
+            <table id="pacienteTable" class="table table-striped">
                 <thead>
                 <tr>
                     <th>Id</th>
-                    <th>Matricula</th>
                     <th>Nombre</th>
                     <th>Apellido</th>
+                    <th>Cedula</th>
+                    <th>Fecha de Ingreso</th>
+                    <th>Domicilio</th>
+                    <th>Email</th>
                     <th></th>
                 </tr>
                 </thead>
-                <tbody id="OdontologoTableBody">
+                <tbody id="PacienteTableBody">
 
                 </tbody>
             </table>
@@ -93,15 +107,11 @@
     <div class="row">
         <div class="col-sm-6" style="display: none;
 											background-color:#e6fffa; padding:10px; border-radius:3px"
-             id="div_odontologo_updating">
-            <form id="update_odontologo_form">
+             id="div_paciente_updating">
+            <form id="update_paciente_form">
                 <div class="form-group">
                     <label >Id:</label>
-                    <input type="text" class="form-control" id="odontologo_id" readonly>
-                </div>
-                <div class="form-group">
-                    <label >Matricula:</label>
-                    <input type="text" class="form-control" placeholder="matricula" id="matricula">
+                    <input type="text" class="form-control" id="paciente_id" readonly>
                 </div>
                 <div class="form-group">
                     <label >Nombre:</label>
@@ -110,6 +120,22 @@
                 <div class="form-group">
                     <label >Apellido:</label>
                     <input type="text" class="form-control" placeholder="apellido" id="apellido">
+                </div>
+                <div class="form-group">
+                    <label >Cedula:</label>
+                    <input type="text" class="form-control" placeholder="cedula" id="cedula">
+                </div>
+                <div class="form-group">
+                    <label >Fecha de Ingreso:</label>
+                    <input type="text" class="form-control" placeholder="fechaIngreso" id="fechaIngreso">
+                </div>
+                <div class="form-group">
+                    <label >Domicilio:</label>
+                    <input type="text" class="form-control" placeholder="domicilio" id="domicilio">
+                </div>
+                <div class="form-group">
+                    <label >Email:</label>
+                    <input type="text" class="form-control" placeholder="email" id="email">
                 </div>
 
 
@@ -121,6 +147,35 @@
     </div>
     <hr>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<div id="ftco-loader" className="show fullscreen">
+    <svg className="circular" width="48px" height="48px">
+        <circle className="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/>
+        <circle className="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
+                stroke="#F96D00"/>
+    </svg>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/get_pacientes.js"></script>
+<script src="js/js/jquery.min.js"></script>
+<script src="js/js/jquery-migrate-3.0.1.min.js"></script>
+<script src="js/js/popper.min.js"></script>
+<script src="js/js/bootstrap.min.js"></script>
+<script src="js/js/jquery.easing.1.3.js"></script>
+<script src="js/js/jquery.waypoints.min.js"></script>
+<script src="js/js/jquery.stellar.min.js"></script>
+<script src="js/js/owl.carousel.min.js"></script>
+<script src="js/js/jquery.magnific-popup.min.js"></script>
+<script src="js/js/aos.js"></script>
+<script src="js/js/jquery.animateNumber.min.js"></script>
+<script src="js/js/bootstrap-datepicker.js"></script>
+<script src="js/js/jquery.timepicker.min.js"></script>
+<script src="js/js/scrollax.min.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+<script src="js/js/google-map.js"></script>
+<script src="js/js/main.js"></script>
+</script>
 </body>
 </html>
