update and delete

--- a/src/main/resources/static/post_odontologos.html
+++ b/src/main/resources/static/post_odontologos.html
@@ -80,38 +80,38 @@
             </div>
         </div>
     </section>
-    <div class="row">
-        <div class="col-sm-7" style="background-color:#e6fffa; padding:10px; border-radius:3px">
-            <h3>Agregar Pelicula</h3>
-            <form id="add_new_odontologo">
-                <div class="form-group">
-                    <label class="control-label" for="matricula">Matrícula:</label>
-                    <input type="text" class="form-control" id="matricula"
-                           placeholder="Ingrese la matrícula"
-                           name="matricula" required></input>
+    </div>
+    <section class="ftco-section ftco-no-pt ftco-no-pb contact-section">
+        <div class="container">
+            <div class="row d-flex align-items-stretch no-gutters">
+                <div class="col-md-6 p-4 p-md-5 order-md-last bg-light">
+                    <h3>Agregar Odontólogo</h3>
+                    <form id="add_new_odontologo">
+                        <div class="form-group">
+                            <label class="control-label" for="matricula">Matrícula:</label>
+                            <input type="text" class="form-control" id="matricula"
+                                   placeholder="Ingrese la matrícula"
+                                   name="matricula" required></input>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label" for="nombre">Nombre:</label>
+                            <input type="text" class="form-control" id="nombre"
+                                   placeholder="Ingrese el nombre"
+                                   name="nombre" required></input>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label" for="apellido">Apellido:</label>
+                            <input type="text" class="form-control" id="apellido"
+                                   placeholder="Ingrese el apellido"
+                                   name="apellido" required></input>
+                        </div>
+                        <button type="submit" class="btn btn-danger"
+                                id="btn-add-new-premio">Guardar</button>
+                    </form>
                 </div>
-                <div class="form-group">
-                    <label class="control-label" for="nombre">Nombre:</label>
-                    <input type="text" class="form-control" id="nombre"
-                           placeholder="Ingrese el nombre"
-                           name="nombre" required></input>
-                </div>
-
-                <div class="form-group">
-                    <label class="control-label" for="apellido">Apellido:</label>
-                    <input type="text" class="form-control" id="apellido"
-                           placeholder="Ingrese el apellido"
-                           name="apellido" required></input>
-                </div>
-
-
-                <button type="submit" class="btn btn-danger"
-                        id="btn-add-new-premio">Guardar</button>
-            </form>
-            <div id="response" style="display:none; margin-top:10px">
             </div>
         </div>
-    </div>
+    </section>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
