update y delete paciente

--- a/src/main/resources/static/get_pacientes.html
+++ b/src/main/resources/static/get_pacientes.html
@@ -104,6 +104,14 @@
             </table>
         </div>
     </div>
+    <ul class="nav nav-pills">
+        <li class="nav-item">
+            <a class="nav-link" href="/">Agregar nueva</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Todas</a>
+        </li>
+    </ul>
     <div class="row">
         <div class="col-sm-6" style="display: none;
 											background-color:#e6fffa; padding:10px; border-radius:3px"
