--- a/src/main/resources/static/post_pacientes.html
+++ b/src/main/resources/static/post_pacientes.html
@@ -80,57 +80,57 @@
             </div>
         </div>
     </section>
-    <div class="row">
-        <div class="col-sm-7" style="background-color:#e6fffa; padding:10px; border-radius:3px">
-            <h3>Agregar Paciente</h3>
-            <form id="add_new_paciente">
-                <div class="form-group">
-                    <label class="control-label" for="nombre">Nombre:</label>
-                    <input type="text" class="form-control" id="nombre"
-                           placeholder="Ingrese el nombre"
-                           name="nombre" required></input>
+    <section class="ftco-section ftco-no-pt ftco-no-pb contact-section">
+        <div class="container">
+            <div class="row d-flex align-items-stretch no-gutters">
+                <div class="col-md-6 p-4 p-md-5 order-md-last bg-light">
+                    <h3>Agregar Paciente</h3>
+                    <form id="add_new_paciente">
+                        <div class="form-group">
+                            <label class="control-label" for="nombre">Nombre:</label>
+                            <input type="text" class="form-control" id="nombre"
+                                   placeholder="Ingrese el nombre"
+                                   name="nombre" required></input>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label" for="apellido">Apellido:</label>
+                            <input type="text" class="form-control" id="apellido"
+                                   placeholder="Ingrese el apellido"
+                                   name="apellido" required></input>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label" for="cedula">Cedula:</label>
+                            <input type="text" class="form-control" id="cedula"
+                                   placeholder="Ingrese la cedual"
+                                   name="cedula" required></input>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label" for="fechaIngreso">Fecha de Ingreso:</label>
+                            <input type="text" class="form-control" id="fechaIngreso"
+                                   placeholder="Ingrese fecha de Ingreso"
+                                   name="fechaIngreso" required></input>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label" for="domicilio">Domicilio:</label>
+                            <input type="text" class="form-control" id="domicilio"
+                                   placeholder="Ingrese el domicilio"
+                                   name="domicilio" required></input>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label" for="email">Email:</label>
+                            <input type="text" class="form-control" id="email"
+                                   placeholder="Ingrese el email"
+                                   name="email" required></input>
+                        </div>
+                        <button type="submit" class="btn btn-danger"
+                                id="btn-add-new-premio">Guardar</button>
+                    </form>
                 </div>
-
-                <div class="form-group">
-                    <label class="control-label" for="apellido">Apellido:</label>
-                    <input type="text" class="form-control" id="apellido"
-                           placeholder="Ingrese el apellido"
-                           name="apellido" required></input>
-                </div>
-                <div class="form-group">
-                    <label class="control-label" for="cedula">Cedula:</label>
-                    <input type="text" class="form-control" id="cedula"
-                           placeholder="Ingrese la cedula"
-                           name="cedula" required></input>
-                </div>
-                <div class="form-group">
-                    <label class="control-label" for="fechaIngreso">Fecha de ingreso:</label>
-                    <input type="text" class="form-control" id="fechaIngreso"
-                           placeholder="Ingrese la fecha de ingreso"
-                           name="fechaIngreso" required></input>
-                </div>
-                <div class="form-group">
-                    <label class="control-label" for="domicilio">Domicilio:</label>
-                    <input type="text" class="form-control" id="domicilio"
-                           placeholder="Ingrese el domicilio"
-                           name="domicilio" required></input>
-                </div>
-                <div class="form-group">
-                    <label class="control-label" for="email">Email:</label>
-                    <input type="text" class="form-control" id="email"
-                           placeholder="Ingrese el email"
-                           name="email" required></input>
-                </div>
-
-
-
-                <button type="submit" class="btn btn-danger"
-                        id="btn-add-new-premio">Guardar</button>
-            </form>
-            <div id="response" style="display:none; margin-top:10px">
             </div>
         </div>
-    </div>
+    </section>
+
+
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
