update_pacientes.js

--- a/src/main/resources/static/get_pacientes.html
+++ b/src/main/resources/static/get_pacientes.html
@@ -8,7 +8,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/post_odontologos.js"></script>
     <link rel="stylesheet" href="./css/open-iconic-bootstrap.min.css">
     <link rel="stylesheet" href="./css/animate.css">
 
@@ -27,8 +26,9 @@
     <link rel="stylesheet" href="./css/flaticon.css">
     <link rel="stylesheet" href="./css/icomoon.css">
     <link rel="stylesheet" href="./css/style.css">
-    <!--    <script type="text/javascript" src="/js/update_pelicula.js"></script>-->
-    <!--    <script type="text/javascript" src="/js/delete_pelicula.js"></script>-->
+    <script type="text/javascript" src="js/get_pacientes.js"></script>
+    <script type="text/javascript" src="js/update_pacientes.js"></script>
+    <script type="text/javascript" src="js/delete_pacientes.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco-navbar-light" id="ftco-navbar">
@@ -166,7 +166,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/get_pacientes.js"></script>
 <script src="js/js/jquery.min.js"></script>
 <script src="js/js/jquery-migrate-3.0.1.min.js"></script>
 <script src="js/js/popper.min.js"></script>
