--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -39,7 +39,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="./post_pacientes.html">Guardar</a></li>
-                        <li><a class="dropdown-item" href="./get_pacientes.html">Listar</a></li>
+                        <li><a class="dropdown-item" href="get_pacientes.html">Listar</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
