navbar y boton de cerrar

--- a/src/main/resources/static/get_pacientes.html
+++ b/src/main/resources/static/get_pacientes.html
@@ -62,11 +62,16 @@
                         Turnos
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Guardar</a></li>
-                        <li><a class="dropdown-item" href="#">Listar</a></li>
+                        <li><a class="dropdown-item" href="./post_turnos.html">Guardar</a></li>
+                        <li><a class="dropdown-item" href="./get_turnos.html">Listar</a></li>
                     </ul>
                 </li>
             </ul>
+            <p class="justify-content-center">
+                <a href="./logout" class="btn btn-info mt-3">
+                    <span class="glyphicon glyphicon-log-out"></span> Cerrar sesión
+                </a>
+            </p>
         </div>
     </div>
 </nav>
