--- a/src/main/resources/static/get_turnos.html
+++ b/src/main/resources/static/get_turnos.html
@@ -65,6 +65,11 @@
                     </ul>
                 </li>
             </ul>
+            <p class="justify-content-center">
+                <a href="./logout" class="btn btn-info mt-3">
+                    <span class="glyphicon glyphicon-log-out"></span> Cerrar sesión
+                </a>
+            </p>
         </div>
     </div>
 </nav>
