--- a/src/main/resources/static/get_odontologos.html
+++ b/src/main/resources/static/get_odontologos.html
@@ -44,8 +44,8 @@
                         Pacientes
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Guardar</a></li>
-                        <li><a class="dropdown-item" href="#">Listar</a></li>
+                        <li><a class="dropdown-item" href="./post_pacientes.html">Guardar</a></li>
+                        <li><a class="dropdown-item" href="./get_pacientes.html">Listar</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
@@ -62,14 +62,30 @@
                         Turnos
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Guardar</a></li>
-                        <li><a class="dropdown-item" href="#">Listar</a></li>
+                        <li><a class="dropdown-item" href="./post_turnos.html">Guardar</a></li>
+                        <li><a class="dropdown-item" href="./get_turnos.html">Listar</a></li>
                     </ul>
                 </li>
             </ul>
+            <p class="justify-content-center">
+                <a href="./logout" class="btn btn-info mt-3">
+                    <span class="glyphicon glyphicon-log-out"></span> Cerrar sesión
+                </a>
+            </p>
         </div>
     </div>
 </nav>
+<section class="hero-wrap hero-wrap-2" style="background-image: url('./images/bg_1.jpg');" data-stellar-background-ratio="0.5">
+    <div class="overlay"></div>
+    <div class="container">
+        <div class="row no-gutters slider-text align-items-center justify-content-center">
+            <div class="col-md-9 ftco-animate text-center">
+                <h1 class="mb-2 bread">Odontólogos</h1>
+                <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Odontólogos <i class="ion-ios-arrow-forward"></i></span><span>Listar <i class="ion-ios-arrow-forward"></i></span></p>
+            </div>
+        </div>
+    </div>
+</section>
 <div class="container">
     <div id="div_odontologo_table">
         <h1>Listado de Odontologos</h1>
