--- a/src/main/resources/static/post_turnos.html
+++ b/src/main/resources/static/post_turnos.html
@@ -66,6 +66,11 @@
                         </ul>
                     </li>
                 </ul>
+                <p class="justify-content-center">
+                    <a href="./logout" class="btn btn-info mt-3">
+                        <span class="glyphicon glyphicon-log-out"></span> Cerrar sesión
+                    </a>
+                </p>
             </div>
         </div>
     </nav>
