--- a/src/main/resources/static/post_pacientes.html
+++ b/src/main/resources/static/post_pacientes.html
@@ -116,10 +116,28 @@
                                    name="fechaIngreso" required></input>
                         </div>
                         <div class="form-group">
-                            <label class="control-label" for="domicilio">Domicilio:</label>
-                            <input type="text" class="form-control" id="domicilio"
-                                   placeholder="Ingrese el domicilio"
-                                   name="domicilio" required></input>
+                            <label class="control-label" for="calle">Calle:</label>
+                            <input type="text" class="form-control" id="calle"
+                                placeholder="Ingrese la calle del domicilio"
+                                name="calle" required></input>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label" for="numero">Número:</label>
+                            <input type="text" class="form-control" id="numero"
+                                placeholder="Ingrese el número del domicilio"
+                                name="numero" required></input>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label" for="localidad">Localidad:</label>
+                            <input type="text" class="form-control" id="localidad"
+                                placeholder="Ingrese la localidad del domicilio"
+                                name="localidad" required></input>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label" for="provincia">Provincia:</label>
+                            <input type="text" class="form-control" id="provincia"
+                                placeholder="Ingrese la provincia del domicilio"
+                                name="provincia" required></input>
                         </div>
                         <div class="form-group">
                             <label class="control-label" for="email">Email:</label>
