--- a/src/main/resources/static/post_turnos.html
+++ b/src/main/resources/static/post_turnos.html
@@ -95,19 +95,19 @@
                     <div class="form-group">
                         <label class="control-label" for="paciente_id">Id del paciente:</label>
                         <input type="text" class="form-control" id="paciente_id"
-                               placeholder="Ingrese la matrícula"
+                               placeholder="Ingrese el id del paciente"
                                name="paciente_id" required></input>
                     </div>
                     <div class="form-group">
                         <label class="control-label" for="odontologo_id">Id del odontologo:</label>
                         <input type="text" class="form-control" id="odontologo_id"
-                               placeholder="Ingrese el odontologo_id"
+                               placeholder="Ingrese el id del odontologo"
                                name="odontologo_id" required></input>
                     </div>
                     <div class="form-group">
                         <label class="control-label" for="fecha_turno">fecha del turno:</label>
                         <input type="text" class="form-control" id="fecha_turno"
-                               placeholder="Ingrese el fecha_turno"
+                               placeholder="Ingrese la fecha de turno"
                                name="fecha_turno" required></input>
                     </div>
                     <button type="submit" class="btn btn-danger"
