--- a/src/main/resources/static/get_odontologos.html
+++ b/src/main/resources/static/get_odontologos.html
@@ -131,7 +131,7 @@
 
                 <button type="submit" class="btn btn-primary">Modificar</button>
             </form>
-            <div id="response" style="display:none; margin:10px">
+            <div id="response" style="margin:10px">
             </div>
         </div>
     </div>
