--- a/src/main/resources/static/get_turnos.html
+++ b/src/main/resources/static/get_turnos.html
@@ -87,14 +87,18 @@
 <div class="container">
     <div id="div_turno_table">
         <h1>Listado de Turnos</h1>
-        <div class="row col-md-6 table-responsive">
+        <div class="row col-md-12 table-responsive">
             <table id="turnoTable" class="table table-striped">
                 <thead>
                 <tr>
                     <th>Id</th>
-                    <th>Paciente</th>
-                    <th>Odontologo</th>
-                    <th>Fecha</th>
+                    <th>Nombre de Paciente</th>
+                    <th>Apellido de Paciente</th>
+                    <th>Cédula de Paciente</th>
+                    <th>Matrícula de Odontologo</th>
+                    <th>Nombre de Odontologo</th>
+                    <th>Apellido de Odontologo</th>
+                    <th>Fecha del Turno</th>
                     <th></th>
                 </tr>
                 </thead>
@@ -114,16 +118,16 @@
                     <input type="text" class="form-control" id="turno_id" readonly>
                 </div>
                 <div class="form-group">
-                    <label >Paciente:</label>
-                    <input type="text" class="form-control" placeholder="paciente" id="paciente">
+                    <label >Id del Paciente:</label>
+                    <input type="text" class="form-control" placeholder="id del paciente" id="paciente_id">
                 </div>
                 <div class="form-group">
-                    <label >Odontologo:</label>
-                    <input type="text" class="form-control" placeholder="odontologo" id="odontologo">
+                    <label >Id del Odontologo:</label>
+                    <input type="text" class="form-control" placeholder="id del odontologo" id="odontologo_id">
                 </div>
                 <div class="form-group">
-                    <label >Fecha:</label>
-                    <input type="text" class="form-control" placeholder="fecha" id="fecha">
+                    <label >Fecha del Turno:</label>
+                    <input type="text" class="form-control" placeholder="fecha de turno" id="fecha_turno">
                 </div>
 
 
